--- a/src/latex-src.tex
+++ b/src/latex-src.tex
@@ -1,22 +1,29 @@
 \documentclass[a4paper,10pt]{letter}
+\usepackage[latin1]{inputenc}
+\usepackage[spanish]{babel}
 \begin{document}
 Si simplemente se desea escribir un texto normal en latex,
-sin complicadas frmulas matemáticas o efectos especiales
+sin complicadas f\'ormulas matem\'aticas o efectos especiales
 como cambios  de fuente, entonces simplemente tiene que escribir
-en español normalmente.
-Si desea cambiar el párrafo ha de dejar una línea en blanco o bien
-utilizar el comando \par.
-No es necesario preocuparse de la sangría de los párrafos:
-todos los párrafos se sangrarán automáticamente con la excepción
-del primer párrafo de una sección.
+en espa\~nol normalmente.
+\par
+Si desea cambiar el p\'arrafo ha de dejar una l\'inea en blanco o bien
+utilizar el comando \verb|\par|.
+
+No es necesario preocuparse de la sangr\'ia de los p\'arrafos:
+todos los p\'arrafos se sangrar\'an autom\'aticamente con la excepi\'on
+del primer p\'arrafo de una secci\'on.
+
 Se ha de distinguir entre las comillas simples 'izquierdad' 
 y la comilla simple 'derecha' cuando se escribe en el ordenador.
+
 En el caso que se quiera utilizar comillas dobles se han de
 escribir dos caracteres 'comillas simples' seguidos, estos es,
 "comillas dobles".
-También se ha de tener cuidado con los guiones: se utiliza un único
-guin para la separación de sílabas, mientras que se utilizan 
-tres  guiones seguidos para producir un guión de los que se usan
-como signo de puntuación --- como en esta oración.
+
+Tambi\'en se ha de tener cuidado con los guiones: se utiliza un \'unico
+guin para la separaci\'on de s\'ilabas, mientras que se utilizan 
+tres  guiones seguidos para producir un gui\'on de los que se usan
+como signo de puntuaci\'on --- como en esta oraci\'on.
 \end{document}
 
