--- a/src/latex-src.tex
+++ b/src/latex-src.tex
@@ -1,7 +1,24 @@
-\documentclass[a4paper,10pt]{letter}
+\documentclass[a4paper,12pt]{article}
 \usepackage[latin1]{inputenc}
 \usepackage[spanish]{babel}
 \begin{document}
+\title{Título del artículo}
+  \author{Nombre y Apellido \\
+          Técnicas Experimentales~\footnote{Universidad de La Laguna}
+         }
+  \date{\today}
+  \maketitle
+   \begin{abstract}
+     En \LaTeX{}~\cite{Lam:86} es sencillo escribir expresiones
+     matemáticas como $a=\sum_{i=1}^{10} {x_i}^{3}$
+     y deben ser escritas entre dos símbolos \$.
+     Los superíndices se obtienen con el símbolo \^{}, y
+     los subíndices con el símbolo \_.
+     Por ejemplo: $x^2 \times y^{\alpha + \beta}$.
+     También se pueden escribir f\'ormulas centradas:
+   \[h^2=a^2 + b^2 \]
+\end{abstract}
+ \section{Primera sección}
 Si simplemente se desea escribir un texto normal en latex,
 sin complicadas f\'ormulas matem\'aticas o efectos especiales
 como cambios  de fuente, entonces simplemente tiene que escribir
@@ -25,5 +42,14 @@ Tambi\'en se ha de tener cuidado con los guiones: se utiliza un \'unico
 guin para la separaci\'on de s\'ilabas, mientras que se utilizan 
 tres  guiones seguidos para producir un gui\'on de los que se usan
 como signo de puntuaci\'on --- como en esta oraci\'on.
+\begin{thebibliography}{00}
+   \bibitem{Lam:86}
+      Lamport, Leslie.
+      TLA in pictures.
+      \emph{IEEE Transactions on Software Engineering},
+      21(9), 768-775.
+      (1995)
+\end{thebibliography}
+\end{document}
 \end{document}
 
