--- a/src/latex-src.tex
+++ b/src/latex-src.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \begin{document}
 \title{Título del artículo}
@@ -17,7 +17,7 @@
      Por ejemplo: $x^2 \times y^{\alpha + \beta}$.
      También se pueden escribir f\'ormulas centradas:
    \[h^2=a^2 + b^2 \]
-\end{abstract}
+ \end{abstract}
  \section{Primera sección}
 Si simplemente se desea escribir un texto normal en latex,
 sin complicadas f\'ormulas matem\'aticas o efectos especiales
@@ -38,6 +38,14 @@ En el caso que se quiera utilizar comillas dobles se han de
 escribir dos caracteres 'comillas simples' seguidos, estos es,
 "comillas dobles".
 
+\bigskip
+  \begin{tabular}{|l|c|c|}
+   \hline
+   Nombre & Edad & Nota \\ \hline
+   Pepe & 24 & 10 \\ \hline
+   Juan & 19 & 8 \\ \hline
+   Luis & 21 & 9 \\ \hline
+   \end{tabular}
 Tambi\'en se ha de tener cuidado con los guiones: se utiliza un \'unico
 guin para la separaci\'on de s\'ilabas, mientras que se utilizan 
 tres  guiones seguidos para producir un gui\'on de los que se usan
